Finished Test with Inspinia

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -29,5 +29,7 @@
     "Unauthorized": "Onbevoegd",
     "Verify Your Email Address": "Verifieer je e-mailadres",
     "You are receiving this email because we received a password reset request for your account.": "Je ontvangt deze email omdat we een wachtwoord herstel hebben ontvangen voor je account.",
-    "You are logged in!": "Je bent ingelogged!"
+    "You are logged in!": "Je bent ingelogged!",
+    "Login Registration": "Login Registratie",
+    "Registration": "Registratie"
   }
