tijd uit aangepast

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -47,5 +47,6 @@
     "Active registrations": "Actieve registraties",
     "Overview": "Overzicht",
     "Edit": "Bewerk",
-    "Details": "Gegevens"
+    "Details": "Gegevens",
+    "Are you sure?": "Bent u zeker?"
   }
