Raport lijst bijwerken en teoveogen

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -48,5 +48,7 @@
     "Overview": "Overzicht",
     "Edit": "Bewerk",
     "Details": "Gegevens",
-    "Are you sure?": "Bent u zeker?"
+    "Are you sure?": "Bent u zeker?",
+    "Total Listing": "Totaal Lijst",
+    "Reports": "Rapporten"
   }
