--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -50,5 +50,9 @@
     "Details": "Gegevens",
     "Are you sure?": "Bent u zeker?",
     "Total Listing": "Totaal Lijst",
-    "Reports": "Rapporten"
+    "Reports": "Rapporten",
+    "Edit selected visitor": "Geselecteerd bezoeker bewerken",
+    "Total list": "Totaal lijst",
+    "Visitor details": "Bezoeker gegevens",
+    "Property access": "Terrein toegang"
   }
