--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -54,5 +54,7 @@
     "Edit selected visitor": "Geselecteerd bezoeker bewerken",
     "Total list": "Totaal lijst",
     "Visitor details": "Bezoeker gegevens",
-    "Property access": "Terrein toegang"
+    "Property access": "Terrein toegang",
+    "Attendance List": "Aanwezigheidslijst",
+    "Action": "Actie"
   }
